  the process ID, and the a %q{FOO} format specifier, which is replaced with
  the contents of the environment variable $FOO.

- [XXX: --child-silent-after-fork...]

- There are new --cachegrind-out-file, --callgrind-out-file and
  --massif-out-file options, which control the names of the output files
  produced by Cachegrind, Callgrind and Massif.  They accept the same %p and
  %q format specifiers that --log-file accepts.

- Cachegrind's 'cg_annotate' script no longer uses the --<pid> option to
  specify the output file.  Instead, the first non-option argument is taken
  to be the name of the output file, and any subsequent non-option arguments
  are taken to be the names of source files to be annotated.  This change
  was necessary due to the addition of the --cachegrind-out-file option.
  'callgrind_annotate' already had this behaviour.

- Cachegrind now uses directory names where possible in its output files.
  This means that the -I option to 'cg_annotate' should not be needed in
  most cases.  It also means it can correctly handle the case where two
  source files in different directories have the same name.
  The same is true for Callgrind and callgrind_annotate, respectively.
  The benefits also apply to KCachegrind, without any further change
  (ie. in most cases there is no configuration of source directories needed).

- A new suppression kind has been introduced: "Jump".  This is for
  suppressing jump-to-invalid-address errors.  Previously you had to use an
  "Addr1" suppression, which didn't make much sense.

- The behaviour of Memcheck's client requests VALGRIND_GET_VBITS and
  VALGRIND_SET_VBITS have changed slightly.  They no longer issue
  addressability errors -- if either array is partially unaddressable,
  they just return 3 (as before).  Also, SET_VBITS doesn't report
  definedness errors if any of the V bits are undefined.

- The behaviour of the tool Lackey has changed slightly.  First, the output